--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -23,7 +23,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
+    "build": "tsdown",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "dev": "bun with-env bun run --watch src/inngest/server.ts",
     "inngest": "bun run inngest-cli@latest dev -u http://localhost:8000/api/inngest",
@@ -59,7 +59,7 @@
   "devDependencies": {
     "@qbs-autonaim/tsconfig": "workspace:*",
     "@types/bun": "1.3.4",
-    "@types/node": "25.0.2",
+    "@types/node": "25.0.3",
     "cross-env": "10.1.0",
     "inngest-cli": "1.15.0",
     "tsdown": "0.18.0",
