--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -27,11 +27,14 @@
     "check": "biome check .",
     "push": "bun with-env drizzle-kit push",
     "studio": "bun with-env drizzle-kit studio",
+    "migrate": ""
     "generate-key": "bun with-env bun src/scripts/generate-encryption-key.ts",
     "set-admin": "bun with-env bun src/scripts/set-admin-role.ts",
     "setup": "bun with-env bun src/scripts/setup-uuid-v7.ts",
     "migrate-workspaces": "bun with-env bun src/scripts/migrate-to-workspaces.ts",
     "migrate-company": "bun with-env bun src/scripts/migrate-company-settings.ts",
+    "migrate-conversations": "bun with-env bun src/scripts/migrate-telegram-conversations.ts",
+    "migrate-messages": "bun with-env bun src/scripts/migrate-telegram-messages.ts",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
     "with-env": "bun run --env-file ../../.env"
   },
