--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -136,14 +136,14 @@ services:
       - "host.docker.internal:host-gateway"
   docling:
     restart: always
-    image: ds4sd/docling:latest
+    image: quay.io/docling-project/docling-serve-cpu:latest
     container_name: docling
     ports:
-      - 8001:8000
+      - 8001:5001
     environment:
-      - DOCLING_API_KEY=${DOCLING_API_KEY:-}
+      - DOCLING_SERVE_ENABLE_UI=1
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:5001/health"]
       interval: 30s
       timeout: 10s
       retries: 3
