--- a/packages/jobs/Dockerfile
+++ b/packages/jobs/Dockerfile
@@ -1,69 +1,30 @@
 FROM oven/bun:1.3.6-alpine AS base
+RUN apk update
+RUN apk add --no-cache libc6-compat
+# Set working directory
+WORKDIR /app
+
+FROM base AS prepare
+# Install turbo globally
+RUN bun add -g turbo@^2
+COPY . .
+# Generate a partial monorepo with a pruned lockfile for @qbs-autonaim/jobs workspace
+RUN turbo prune @qbs-autonaim/jobs --docker
 
 FROM base AS builder
-RUN apk update && apk add --no-cache libc6-compat
-WORKDIR /app
-
-# Copy all files
-COPY . .
-
-# Install dependencies and build
+# First install the dependencies (as they change less often)
+COPY --from=prepare /app/out/json/ .
 RUN bun install
-RUN bunx turbo build --filter=@qbs-autonaim/jobs
-
-FROM base AS installer
-WORKDIR /app
-
-# Copy built files
-COPY --from=builder /app .
-
-FROM base AS runner
-WORKDIR /app
-
-# Install system dependencies including Chromium for Puppeteer
-RUN apk add --no-cache \
-    openssl \
-    chromium \
-    nss \
-    freetype \
-    harfbuzz \
-    ca-certificates \
-    ttf-freefont
-
-# Set environment variables
-ENV NODE_ENV=production \
-    PORT=8000 \
-    PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
-    PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
-
-# Don't run production as root
-RUN addgroup --system --gid 1001 bunjs
-RUN adduser --system --uid 1001 bunjs
-
-# Создаем директорию для MTCute с правами для bunjs
-RUN mkdir -p /tmp/mtcute && chown -R bunjs:bunjs /tmp/mtcute
-
-USER bunjs
-
-COPY --from=builder /app .
-
-CMD ["bun", "run", "packages/jobs/src/inngest/server.ts"]
-
-# Build the project and its dependencies
-COPY --from=builder /app/out/full/ .
-
+# Build the project
+COPY --from=prepare /app/out/full/ .
 # Uncomment and use build args to enable remote caching
 # ARG TURBO_TEAM
 # ENV TURBO_TEAM=$TURBO_TEAM
-
 # ARG TURBO_TOKEN
 # ENV TURBO_TOKEN=$TURBO_TOKEN
-
 RUN bunx turbo build --filter=@qbs-autonaim/jobs
 
 FROM base AS runner
-WORKDIR /app
-
 # Install system dependencies including Chromium for Puppeteer
 RUN apk add --no-cache \
     openssl \
@@ -89,6 +50,6 @@ RUN mkdir -p /tmp/mtcute && chown -R bunjs:bunjs /tmp/mtcute
 
 USER bunjs
 
-COPY --from=installer /app .
+COPY --from=builder /app .
 
 CMD ["bun", "run", "packages/jobs/src/inngest/server.ts"]
