--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -21,16 +21,16 @@
   "dependencies": {
     "@qbs-autonaim/config": "workspace:*",
     "@qbs-autonaim/lib": "workspace:*",
-    "ai": "6.0.29",
+    "ai": "6.0.38",
     "langfuse": "3.38.6",
-    "string-strip-html": "^13.5.0",
+    "string-strip-html": "^13.5.3",
     "uuid": "^13.0.0",
     "zod": "4.3.5"
   },
   "devDependencies": {
     "@qbs-autonaim/tsconfig": "workspace:*",
-    "@types/node": "25.0.8",
-    "tsdown": "0.19.0",
+    "@types/node": "25.0.9",
+    "tsdown": "0.20.0-beta.3",
     "typescript": "5.9.3"
   }
 }
