--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@qbs-autonaim/tsconfig": "workspace:*",
-    "tsdown": "0.19.0",
+    "tsdown": "0.20.0-beta.3",
     "typescript": "5.9.3"
   }
 }
