--- a/packages/emails/package.json
+++ b/packages/emails/package.json
@@ -36,7 +36,7 @@
     "nodemailer": "^7.0.12",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-email": "5.2.1",
+    "react-email": "5.2.5",
     "resend": "^6.7.0",
     "sharp": "^0.34.5",
     "tailwindcss": "4.1.18",
@@ -44,12 +44,12 @@
     "zod": "4.3.5"
   },
   "devDependencies": {
-    "@react-email/preview-server": "5.2.1",
-    "@types/node": "25.0.8",
+    "@react-email/preview-server": "5.2.5",
+    "@types/node": "25.0.9",
     "@types/nodemailer": "^7.0.5",
     "@types/react": "19.2.8",
     "@types/react-dom": "19.2.3",
-    "tsdown": "0.19.0",
+    "tsdown": "0.20.0-beta.3",
     "typescript": "5.9.3"
   }
 }
