--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -37,8 +37,8 @@
     "with-env": "bun run --env-file ../../.env"
   },
   "dependencies": {
-    "@ai-sdk/deepseek": "2.0.4",
-    "@ai-sdk/openai": "3.0.8",
+    "@ai-sdk/deepseek": "2.0.8",
+    "@ai-sdk/openai": "3.0.12",
     "@inngest/realtime": "git+https://github.com/kodermax/inngest-js.git#realtime-dist",
     "@qbs-autonaim/config": "workspace:*",
     "@qbs-autonaim/db": "workspace:*",
@@ -49,25 +49,25 @@
     "@qbs-autonaim/shared": "workspace:*",
     "@qbs-autonaim/tg-client": "workspace:*",
     "@t3-oss/env-core": "0.13.10",
-    "ai": "6.0.29",
+    "ai": "6.0.38",
     "axios": "1.13.2",
     "crawlee": "3.15.3",
-    "inngest": "3.49.1",
+    "inngest": "3.49.2",
     "langfuse": "3.38.6",
     "puppeteer": "24.35.0",
     "puppeteer-extra": "3.3.6",
     "puppeteer-extra-plugin-stealth": "2.11.2",
     "sharp": "0.34.5",
-    "string-strip-html": "13.5.0",
+    "string-strip-html": "13.5.3",
     "zod": "4.3.5"
   },
   "devDependencies": {
     "@qbs-autonaim/tsconfig": "workspace:*",
     "@types/bun": "1.3.6",
-    "@types/node": "25.0.8",
+    "@types/node": "25.0.9",
     "cross-env": "10.1.0",
     "inngest-cli": "^1.16.0",
-    "tsdown": "0.19.0",
+    "tsdown": "0.20.0-beta.3",
     "typescript": "5.9.3"
   }
 }
