--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -34,23 +34,23 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@ai-sdk/deepseek": "2.0.4",
-    "@ai-sdk/openai": "3.0.8",
-    "@aws-sdk/client-s3": "3.966.0",
-    "@aws-sdk/s3-request-presigner": "3.966.0",
+    "@ai-sdk/deepseek": "2.0.8",
+    "@ai-sdk/openai": "3.0.12",
+    "@aws-sdk/client-s3": "3.970.0",
+    "@aws-sdk/s3-request-presigner": "3.970.0",
     "@langfuse/otel": "^4.5.1",
     "@langfuse/tracing": "^4.5.1",
-    "@opentelemetry/sdk-node": "^0.209.0",
+    "@opentelemetry/sdk-node": "^0.210.0",
     "@qbs-autonaim/config": "workspace:*",
-    "ai": "6.0.29",
+    "ai": "6.0.38",
     "langfuse": "3.38.6",
     "sharp": "0.34.5",
     "zod": "4.3.5"
   },
   "devDependencies": {
     "@qbs-autonaim/tsconfig": "workspace:*",
-    "@types/node": "25.0.8",
-    "tsdown": "0.19.0",
+    "@types/node": "25.0.9",
+    "tsdown": "0.20.0-beta.3",
     "typescript": "5.9.3"
   }
 }
