--- a/packages/server-utils/package.json
+++ b/packages/server-utils/package.json
@@ -17,8 +17,8 @@
   },
   "devDependencies": {
     "@qbs-autonaim/tsconfig": "workspace:*",
-    "@types/node": "25.0.8",
-    "tsdown": "0.19.0",
+    "@types/node": "25.0.9",
+    "tsdown": "0.20.0-beta.3",
     "typescript": "5.9.3"
   },
   "scripts": {
