--- a/packages/tg-client/package.json
+++ b/packages/tg-client/package.json
@@ -36,7 +36,7 @@
     "@qbs-autonaim/shared": "workspace:*",
     "@qbs-autonaim/server-utils": "workspace:*",
     "file-type": "21.3.0",
-    "hono": "4.11.3",
+    "hono": "4.11.4",
     "mime-types": "3.0.2",
     "zod": "^4.3.5"
   },
@@ -44,8 +44,8 @@
     "@qbs-autonaim/tsconfig": "workspace:*",
     "@types/bun": "1.3.6",
     "@types/mime-types": "^3.0.1",
-    "@types/node": "25.0.8",
-    "tsdown": "^0.19.0",
+    "@types/node": "25.0.9",
+    "tsdown": "^0.20.0-beta.3",
     "typescript": "5.9.3"
   }
 }
