--- a/biome.json
+++ b/biome.json
@@ -14,6 +14,7 @@
       "!**/packages/ui/src/**/*.tsx",
       "!**/apps/web/src/**/*.tsx",
       "!**/apps/web/src/**/*.ts",
+      "!**/apps/docs/src/**/*.ts",
       "!**/packages/ui/src/**/*.ts",
       "!**/packages/ui/src/**/*.css",
       "!**/tooling/**/*",
@@ -65,7 +66,8 @@
   "css": {
     "parser": {
       "cssModules": false,
-      "allowWrongLineComments": true
+      "allowWrongLineComments": true,
+      "tailwindDirectives": true
     }
   },
   "overrides": [
@@ -80,7 +82,8 @@
       "css": {
         "parser": {
           "cssModules": false,
-          "allowWrongLineComments": true
+          "allowWrongLineComments": true,
+          "tailwindDirectives": true
         }
       },
       "formatter": {
